[metadata]
name = airflow_utils
version = 0.1.0
author = junsungs950
author_email = junsungs950@gmail.com
description = short_description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://json9101.github.io/airflow_utils
project_urls =
    Bug Tracker = https://github.com/json9101/airflow_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    airflow_utils-ping = airflow_utils:ping
    airflow_utils-bash = airflow_utils:gen_bash_task
